@@ -486,185 +486,6 @@ throws|throws
 name|IOException
 function_decl|;
 block|}
-comment|/**    * Returns sub IndexReader that contains the given document id.    *        * @param doc id of document    * @param reader parent reader    * @return sub reader of parent which contains the specified doc id    */
-DECL|method|subReader
-specifier|public
-specifier|static
-name|IndexReader
-name|subReader
-parameter_list|(
-name|int
-name|doc
-parameter_list|,
-name|IndexReader
-name|reader
-parameter_list|)
-block|{
-name|List
-argument_list|<
-name|IndexReader
-argument_list|>
-name|subReadersList
-init|=
-operator|new
-name|ArrayList
-argument_list|<
-name|IndexReader
-argument_list|>
-argument_list|()
-decl_stmt|;
-name|ReaderUtil
-operator|.
-name|gatherSubReaders
-argument_list|(
-name|subReadersList
-argument_list|,
-name|reader
-argument_list|)
-expr_stmt|;
-name|IndexReader
-index|[]
-name|subReaders
-init|=
-name|subReadersList
-operator|.
-name|toArray
-argument_list|(
-operator|new
-name|IndexReader
-index|[
-name|subReadersList
-operator|.
-name|size
-argument_list|()
-index|]
-argument_list|)
-decl_stmt|;
-name|int
-index|[]
-name|docStarts
-init|=
-operator|new
-name|int
-index|[
-name|subReaders
-operator|.
-name|length
-index|]
-decl_stmt|;
-name|int
-name|maxDoc
-init|=
-literal|0
-decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|subReaders
-operator|.
-name|length
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|docStarts
-index|[
-name|i
-index|]
-operator|=
-name|maxDoc
-expr_stmt|;
-name|maxDoc
-operator|+=
-name|subReaders
-index|[
-name|i
-index|]
-operator|.
-name|maxDoc
-argument_list|()
-expr_stmt|;
-block|}
-return|return
-name|subReaders
-index|[
-name|subIndex
-argument_list|(
-name|doc
-argument_list|,
-name|docStarts
-argument_list|)
-index|]
-return|;
-block|}
-comment|/**    * Returns sub-reader subIndex from reader.    *     * @param reader parent reader    * @param subIndex index of desired sub reader    * @return the subreader at subIndex    */
-DECL|method|subReader
-specifier|public
-specifier|static
-name|IndexReader
-name|subReader
-parameter_list|(
-name|IndexReader
-name|reader
-parameter_list|,
-name|int
-name|subIndex
-parameter_list|)
-block|{
-name|List
-argument_list|<
-name|IndexReader
-argument_list|>
-name|subReadersList
-init|=
-operator|new
-name|ArrayList
-argument_list|<
-name|IndexReader
-argument_list|>
-argument_list|()
-decl_stmt|;
-name|ReaderUtil
-operator|.
-name|gatherSubReaders
-argument_list|(
-name|subReadersList
-argument_list|,
-name|reader
-argument_list|)
-expr_stmt|;
-name|IndexReader
-index|[]
-name|subReaders
-init|=
-name|subReadersList
-operator|.
-name|toArray
-argument_list|(
-operator|new
-name|IndexReader
-index|[
-name|subReadersList
-operator|.
-name|size
-argument_list|()
-index|]
-argument_list|)
-decl_stmt|;
-return|return
-name|subReaders
-index|[
-name|subIndex
-index|]
-return|;
-block|}
 DECL|method|buildReaderContext
 specifier|public
 specifier|static
